...
    var latitude = 0.0
    var longitude = 0.0

    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "Your Current Location"

        locationManager.delegate = self
        locationManager.requestWhenInUseAuthorization()
        locationManager.requestLocation()

        updateButton.addTarget(self, action: #selector(updateButtonTapped), for: UIControlEvents.touchUpInside)
    }

    func updateButtonTapped() {
        let alertViewController = UIAlertController(
                title: "Success",
                message: "SENT: \(femaleSwitch.isOn ? "" : "Not ")Female (\(latitude), \(longitude))",
                preferredStyle: UIAlertControllerStyle.alert
        )
        let okAction = UIAlertAction(title: "OK", style: UIAlertActionStyle.default)
        alertViewController.addAction(okAction)
        self.present(alertViewController, animated: true)
...
